made login page and component

--- a/front-end/styles/globals.css
+++ b/front-end/styles/globals.css
@@ -1,6 +1,6 @@
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;
 
 /* GENERAL */
 
@@ -74,6 +74,7 @@ nav .current {
   aspect-ratio: 1;
   width: auto;
 }
+
 .icon-button:hover {
   background-color: rgb(255, 119, 119);
   transition-duration: 0.3s;
@@ -113,8 +114,10 @@ p {
 }
 
 .collapsible.collapsed .collapsible-header {
-  border-radius: 0.25em; /* als gecollapsed dan aan alle kanten border radius */
+  border-radius: 0.25em;
+  /* als gecollapsed dan aan alle kanten border radius */
 }
+
 .collapsible.expanded .collapsible-header {
   border-radius: 0.25em 0.25em 0em 0em;
 }
@@ -126,9 +129,11 @@ p {
   margin-right: 0.25em;
   color: whitesmoke;
 }
+
 .collapsible.collapsed .collapsible-header:after {
   content: "+";
 }
+
 .collapsible.expanded .collapsible-header:after {
   content: "-";
 }
@@ -166,6 +171,7 @@ p {
 .login-form div {
   margin: 0.5em;
 }
+
 .login-form label {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.2em;
