--- a/front-end/styles/globals.css
+++ b/front-end/styles/globals.css
@@ -1,6 +1,6 @@
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;
 
 /* GENERAL */
 
@@ -77,6 +77,26 @@ nav .current {
 .icon-button:hover {
   background-color: rgb(255, 119, 119);
   transition-duration: 0.3s;
+}
+
+.colored-button {
+  background-color: forestgreen;
+  color: whitesmoke;
+  padding: 0.75em;
+  border: none;
+  border-radius: 0.25em;
+  font-size: 1em;
+  font-weight: bold;
+}
+
+.colored-button:hover {
+  background-color: rgb(85, 168, 85);
+  transition-duration: 0.3s;
+}
+
+.centered {
+  width: 100%;
+  text-align: center;
 }
 
 /* TEXT */
@@ -196,4 +216,8 @@ p {
 .login-form button:hover {
   background-color: rgb(68, 185, 68);
   transition-duration: 0.1s;
+}
+
+.form-error {
+  color: red;
 }
