added correct styling to login and register pages, added logout button and display name when logged in

--- a/front-end/styles/globals.css
+++ b/front-end/styles/globals.css
@@ -190,7 +190,7 @@ p {
   padding: 0.5em;
   padding-left: 2em;
   padding-right: 2em;
-  background-color: forestgreen;
+  background-color: #228b22;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;
   font-size: 1.25em;
