nog enkele fixes

--- a/front-end/styles/globals.css
+++ b/front-end/styles/globals.css
@@ -222,8 +222,8 @@ p {
 .login-form button:hover {
   background-color: rgb(68, 185, 68);
   transition-duration: 0.1s;
+}
 
 .form-error {
   color: red;
 }
-
